--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "dependencies": {
     "bluebird": "^3.3.4",
+    "express": "^4.13.4",
     "hoek": "^3.0.4",
     "lodash": "^4.6.1",
     "pluralize": "^1.2.1",
